--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   persistent_bottom_nav_bar: ^5.0.2
+  buttons_tabbar: ^1.3.8
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +46,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/intro_screen.png
+    - assets/images/menu_icon.png
+    - assets/images/Bell_pin.png
+    - assets/images/shop_cart.png
+    - assets/images/back_button.png
+    - assets/images/details.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
