Edit order and images appearance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,17 +58,18 @@ flutter:
     - assets/images/autumn.png
     - assets/images/turtle_neck.png
     - assets/images/long_sleeve.png
-    - assets/images/sportwe.png
+    - assets/images/sportswear.png
     - assets/images/hangout.png
     - assets/images/hoodie.png
     - assets/images/cotton.png
     - assets/images/slim.png
     - assets/images/image.png
-    - assets/images/linen.png
+    - assets/images/linen_dress.png
     - assets/images/filted_waist.png
     - assets/images/maxi.png
     - assets/images/front_tie.png
     - assets/images/ohara.png
+    - assets/images/here.png
     - assets/images/tie_back.png
     - assets/images/leaves.png
     - assets/images/off_shoulder.png
